@@ -1,3 +1,9 @@
+2024-04-10  Morten Welinder  <terra@gnome.org>
+
+	* dialog-doc-metadata.c
+	(dialog_doc_metadata_init_calculations_page): Use
+	value_get_as_string to get shortest representation of tolerance.
+
 2024-02-11  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.57
